--- a/.github/workflows/build-airflow.yml
+++ b/.github/workflows/build-airflow.yml
@@ -37,3 +37,4 @@ jobs:
           password: ${{ secrets.DOCKER_PASSWORD }}
           repository: ${{ secrets.DOCKER_USERNAME }}/airflow
           readme-filepath: ./airflow/README.md
+          short-description: This custom Docker image extends the official Apache Airflow image with additional packages and functionality to enhance task execution and alerting.
