chore: update airflow uid

--- a/airflow/Dockerfile
+++ b/airflow/Dockerfile
@@ -5,9 +5,12 @@ USER root
 RUN apt-get update \
   && apt-get install -y --no-install-recommends \
     telnet \
-  # map airflow user to provided UID so host-mounted volumes can match ownership
-  && groupmod -g ${USER_ID} airflow 2>/dev/null || true \
-  && usermod -u ${USER_ID} -g ${USER_ID} airflow 2>/dev/null || true \
+  && if ! id -u airflow >/dev/null 2>&1; then \
+       useradd -u ${USER_ID} -m -d /home/airflow -s /bin/bash airflow; \
+     else \
+       usermod -u ${USER_ID} airflow 2>/dev/null || true; \
+     fi \
+  && mkdir -p /opt/airflow /home/airflow \
   && chown -R ${USER_ID}:${USER_ID} /opt/airflow /home/airflow 2>/dev/null || true \
   && apt-get autoremove -yqq --purge \
   && apt-get clean \
@@ -15,8 +18,8 @@ RUN apt-get update \
 
 USER airflow
 # Install additional packages
-COPY requirements.txt /requirements.txt
-RUN pip install --no-cache-dir -r /requirements.txt
+COPY requirements.txt /home/airflow/requirements.txt
+RUN pip install --no-cache-dir -r /home/airflow/requirements.txt
 COPY alerts /opt/airflow/alerts
 ENV PYTHONPATH="${PYTHONPATH}:/opt/airflow"
 
